[tool.poetry]
name = "adv-ml-techniques-for-imbalanced-dataset"
version = "0.1.0"
description = "advanced machine learning"
authors = ["Olivier-2018 <80416841+olivier-2018@users.noreply.github.com>"]
license = "MIT license"
readme = "README.md"
packages = [{include = "adv_ml_techniques_for_imbalanced_dataset"}]

[tool.poetry.dependencies]
python = "3.8.10"
numpy = "^1.23.2"
pandas = "^1.4.4"
sklearn = "^0.0"
scikit-optimize = "^0.9.0"
catboost = "^1.0.6"
xgboost = "^1.6.2"
lightgbm = "^3.3.2"
matplotlib = "^3.5.3"
seaborn = "^0.11.2"
tqdm = "^4.64.0"
DateTime = "^4.5"
scipy = "^1.9.1"
imblearn = "^0.0"
ipykernel = "^6.15.2"
feature-engine = "^1.4.1"
imbalanced-learn = "^0.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
